--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "client:build":"cd ./client && npm run build",
-    "dev": "concurrently \"cd ./client && npm run dev \" \"cd ./server && npm run dev \"",
-    "install:client":"cd ./client && npm i",
-    "install":"cd ./server && npm i",
-    "deploy":"concurrently \"npm run client:build\" \"git add -A && git commit -m \"ready for deployment\"\" \"git push heroku main\"",
-    "start":"cd ./server && npm start"
+    "client:build": "cd ./client && npm run build",
+    "dev": "concurrently \"cd ./client && npm run dev\" \"cd ./server && npm run dev\"",
+    "install:client": "cd ./client && npm i",
+    "install": "cd ./server && npm i",
+    "save": "git add -A && git commit -m \"ready for deploy\"",
+    "push": "git push heroku main",
+    "deploy": "npm run client:build && npm run save && npm run push",
+    "start": "cd ./server && npm start"
   },
   "keywords": [],
   "author": "",
